# nepse-stock

./: README.md  pyproject.toml  pypython.toml
.github/workflows/: scrape_news.yml
data/: fundamentals.csv  nepal_stock_analysis.csv  nepal_stock_news.csv
src/: nepal_stock_scraper.py  news_sentiment_analyzer.py  scrape_eps.py
