[project]
name = "nepse-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "requests>=2.34.2",
    "lxml==5.2.2",
    "ollama>=0.4.0",
    "pandas>=2.2.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
